manifests-successful/radar-appserver-0.2.2.tgz-manifest.yaml
---
# Source: radar-appserver/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-release-radar-appserver
  labels:
    helm.sh/chart: radar-appserver-0.2.2
    app.kubernetes.io/name: radar-appserver
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels:
      helm.sh/chart: radar-appserver-0.2.2
      app.kubernetes.io/name: radar-appserver
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/version: "2.4.1"
      app.kubernetes.io/managed-by: Helm
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/12
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'radar-appserver-0.2.2.tgz'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: management-portal
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'radar-appserver-0.2.2.tgz'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: 'radar-appserver-postgresql'
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: 'radar-appserver-0.2.2.tgz'
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
---
# Source: radar-appserver/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-radar-appserver
  labels:
    helm.sh/chart: radar-appserver-0.2.2
    app.kubernetes.io/name: radar-appserver
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: radar-appserver
    app.kubernetes.io/instance: my-release
---
# Source: radar-appserver/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-radar-appserver
  labels:
    helm.sh/chart: radar-appserver-0.2.2
    app.kubernetes.io/name: radar-appserver
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.4.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: radar-appserver
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum/configmap: 00022b0da62c1ddc64155c19874fea6c8b1d2fd0af9f31a45367f08421c09696
        checksum/secrets: bfde5489299d04c58f2a546c9aa65aa20e95c7564af000910c31ef6fb6dc0c00
      labels:
        app.kubernetes.io/name: radar-appserver
        app.kubernetes.io/instance: my-release
    spec:
      securityContext:
        {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                    - radar-appserver
                  - key: "app.kubernetes.io/instance"
                    operator: In
                    values:
                    - my-release
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: radar-appserver
          securityContext:
            {}
          image: "radarbase/radar-appserver:2.4.1"
          imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - /etc/radar-appserver/healthcheck.sh
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - /etc/radar-appserver/healthcheck.sh
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /etc/radar-appserver/
            - name: secrets
              mountPath: /etc/google/firebase-adminsdk.json
              subPath: firebaseAdminSdkKey
      volumes:
        - name: config
          configMap:
            name: my-release-radar-appserver
        - name: secrets
          secret:
            secretName: my-release-radar-appserver
---
# Source: radar-appserver/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-radar-appserver
  labels:
    helm.sh/chart: radar-appserver-0.2.2
    app.kubernetes.io/name: radar-appserver
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.4.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "localhost"
      secretName: radar-base-tls-appserver
  rules:
    - host: "localhost"
      http:
        paths:
          - path: "/appserver/?(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-release-radar-appserver
                port:
                  number: 8080
---
# Source: radar-appserver/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-radar-appserver-test-connection"
  labels:
    app.kubernetes.io/name: radar-appserver
    helm.sh/chart: radar-appserver-0.2.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['my-release-radar-appserver:8080']
  restartPolicy: Never
